components/input/src/styles/color.scss
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

/* stylelint-disable scss/dollar-variable-pattern, selector-class-pattern, max-nesting-depth, selector-max-class */

// Support for fallback values
@use '@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska' as v;

.wrapper {
  border-color: var(--ds-auro-input-border-color);
  background-color: var(--ds-auro-input-background-color);
  color: var(--ds-auro-input-text-color);

  label {
    color: var(--ds-auro-input-label-text-color);
  }

  input {
    caret-color: var(--ds-auro-input-caret-color);
    color: var(--ds-auro-input-text-color);

    &::placeholder {
      color: var(--ds-auro-input-placeholder-text-color);
    }

    &:focus {
      &::placeholder {
        color: var(--ds-auro-input-placeholder-text-color);
      }
    }
  }

  .displayValue {
    background-color: var(--ds-auro-input-background-color);
  }
}

:host(:not([ondark])) {
  .wrapper {
    &:focus-within {
      --ds-auro-input-border-color: var(--ds-basic-color-border-brand, #{v.$ds-basic-color-border-brand});
    }
  }
}

:host([ondark]) {
  .wrapper {
    &:focus-within {
      --ds-auro-input-border-color: var(--ds-basic-color-border-inverse, #{v.$ds-basic-color-border-inverse});
    }
  }
}

:host(:is([validity]:not([validity='valid']))) {
  .wrapper {
    --ds-auro-input-border-color: var(--ds-basic-color-status-error, #{v.$ds-basic-color-status-error});
  }
}

:host([ondark]:is([validity]:not([validity='valid']))) {
  .wrapper {
    --ds-auro-input-border-color: var(--ds-basic-color-status-error-subtle, #{v.$ds-basic-color-status-error-subtle});
  }
}

